feat: remove SDE dependency

--- a/data/fsd-patches/dbuffcollections.ipynb
+++ b/data/fsd-patches/dbuffcollections.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,23 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Load localization data\n",
     "## You may change the language, like `localization_fsd_en-us.pickle`\n",
-    "with open('../index-cache/staticdata/localization_fsd_zh.pickle', 'rb') as f:\n",
+    "with open('../../../../../data/index-cache/staticdata/localization_fsd_zh.pickle', 'rb') as f:\n",
     "    _, loc = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect('../index-cache/staticdata/dbuffcollections.static')\n",
+    "db = sqlite3.connect('../../../../../data/index-cache/staticdata/dbuffcollections.static')\n",
     "cursor = db.cursor()"
    ]
   },
