--- a/data/fsd-patches/dbuffcollections.ipynb
+++ b/data/fsd-patches/dbuffcollections.ipynb
@@ -33,29 +33,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Load localization data\n",
-    "## You may change the language, like `localization_fsd_en-us.pickle`\n",
-    "with open('../../../../../data/index-cache/staticdata/localization_fsd_zh.pickle', 'rb') as f:\n",
+    "## You may change the language, like `localization_fsd_zh.pickle`\n",
+    "with open('../fsd-localization/localization_fsd_en-us.pickle', 'rb') as f:\n",
     "    _, loc = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect('../../../../../data/index-cache/staticdata/dbuffcollections.static')\n",
+    "db = sqlite3.connect('../fsd-extra/dbuffcollections.static')\n",
     "cursor = db.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
